--- a/blogpost.html
+++ b/blogpost.html
@@ -1,10 +1,12 @@
 <html>
     <head>
         <title> El titulo es este</title>
+        <link rel="stylesheet" href="./css/styles.css"/>
     </head>
     <body>
         <h1>Este es el blog</h1>
         <p>Este es el primer parrafo</p>
-
+        <p>xD</p>
+        <p>nani nani</p>
     </body>
 </html>
