ultimo commint add

--- a/blogpost.html
+++ b/blogpost.html
@@ -4,9 +4,13 @@
         <link rel="stylesheet" href="./css/styles.css"/>
     </head>
     <body>
-        <h1>Este es el blog</h1>
-        <p>Este es el primer parrafo</p>
-        <p>xD</p>
-        <p>nani nani</p>
+        <div id="container">
+            <h1>Este es el blog</h1>
+        </div>
+        <div id="post">
+            <p>Este es el primer parrafo</p>
+            <p>xD</p>
+            <p>nani nani</p>  
+        </div>
     </body>
 </html>
