--- a/blogpost.html
+++ b/blogpost.html
@@ -4,6 +4,9 @@
         <link rel="stylesheet" href="./css/styles.css"/>
     </head>
     <body>
+        <div id="cabecera">
+            <h1>Cabecera</h1>
+        </div>
         <div id="container">
             <h1>Este es el blog</h1>
         </div>
