nuevo contenido en body

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,6 +11,7 @@
             <p>Este es el primer parrafo</p>
             <p>xD</p>
             <p>nani nani</p>  
+            <p>lero lero candelero</p>
         </div>
     </body>
 </html>
