--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="./css/styles.css"/>
     </head>
     <body>
-        <div id="cabecera">
+        <div id="cabecera xD xD">
             <h1>Cabecera</h1>
         </div>
         <div id="container">
