--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,7 @@
         </div>
         <div id="container">
             <h1>Este es el blog</h1>
+            <h2>probando 123</h2>
         </div>
         <div id="post">
             <p>Este es el primer parrafo</p>
