--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
             <h1>Cabecera ay chucha mas</h1>
         </div>
         <div id="container">
-            <h1>Este es el blog</h1>
+            <h1>Este es el blog lerlero cambio titulo</h1>
             <h2>probando 123</h2>
         </div>
         <div id="post">
