--- a/blogpost.html
+++ b/blogpost.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div id="cabecera">
-            <h1>Cabecera ay chucha mas</h1>
+            <h1>Cabecera para verificar cambios</h1>
         </div>
         <div id="container">
             <h1>Este es el blog cambio titulo computador</h1>
