cambios en header

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title> El titulo es este</title>
+        <title> El titulo es este en header</title>
         <link rel="stylesheet" href="./css/styles.css"/>
     </head>
     <body>
