cambios en footer

--- a/blogpost.html
+++ b/blogpost.html
@@ -15,7 +15,7 @@
             <p>Este es el primer parrafo</p>
             <p>xD</p>
             <p>nani nani</p>  
-            <p>lero lero candelero</p>
+            <p>cambios en footer</p>
         </div>
     </body>
 </html>
