--- a/blogpost.html
+++ b/blogpost.html
@@ -14,7 +14,7 @@
         <div id="post">
             <p>Este es el primer parrafo</p>
             <p>xD</p>
-            <p>nani nani</p>  
+            <p>todo esta bien</p>  
             <p>cambios en footer</p>
         </div>
     </body>
