--- a/blogpost.html
+++ b/blogpost.html
@@ -14,7 +14,8 @@
         <div id="post">
             <p>Este es el primer parrafo</p>
             <p>xD</p>
-            <p>todo esta bien</p>  
+            <p>todo esta bien</p>
+            <p><img src='./imagines/daemon.jpg'width='100%'/></p>  
             <p>cambios en footer</p>
         </div>
     </body>
