--- a/blogpost.html
+++ b/blogpost.html
@@ -17,6 +17,7 @@
             <p>todo esta bien</p>
             <p><img src='./imagines/daemon.jpg'width='100%'/></p>  
             <p>cambios en footer</p>
+            <p>cambios en reserva</p>
         </div>
     </body>
 </html>
